ui: fix spacing and switch column order
Part Of #102374

Previously, the style was being overwritten on CC Console,
so this commit adds all the missing styles already inherited
on DB Console, that was not explicit set.

This commit also changes the order of the columns on Statement
Page to put the `% of All Runtime` more prominent and not at
the end.

Release note: None

--- a/pkg/ui/workspaces/cluster-ui/src/searchCriteria/searchCriteria.module.scss
+++ b/pkg/ui/workspaces/cluster-ui/src/searchCriteria/searchCriteria.module.scss
@@ -7,11 +7,25 @@
   margin-right: 10px;
   padding: 20px;
   background-color: white;
+  font-family: $font-family--lato-regular;
 }
 
 .top-area {
   z-index: 5;
   background-color: white;
+  font-family: $font-family--lato-regular;
+
+  label {
+    display: block;
+    margin-bottom: 0px;
+    font-family: $font-family--lato-regular;
+    font-size: $font-size--medium;
+    font-weight: $font-weight--light;
+  }
+
+  ul {
+    margin-bottom: 1em;
+  }
 }
 
 .timescale-small {
@@ -22,6 +36,7 @@
   color: $colors--neutral-6;
   font-family: $font-family--semi-bold;
   font-size: $font-size--medium;
+  line-height: $line-height--medium-small;
 }
 
 .margin-top-btn {
